--- a/public/style.css
+++ b/public/style.css
@@ -2,19 +2,42 @@
   font-size: 16px;
 }
 h2 {
-  font-size: 20px;
+  font-size: 30px;
   margin-top: 3px;
+}
+span {
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
+  -webkit-background-clip: text;
+  color: transparent;
 }
 * {
   box-sizing: border-box;
   margin-top: 0;
 }
 
-.body {
+.rainbow:nth-child(2) {
+  background-color: blue;
+}
+.rainbow:nth-child(3) {
+  background-color: red;
+}
+.rainbow:nth-child(4) {
+  background-color: yellow;
+}
+
+body {
   margin: 0;
   min-height: 100vh;
   position: relative;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .back {
@@ -27,16 +50,25 @@ h2 {
 canvas {
   margin-top: 10px;
 }
-.formcaintainer {
-  position: fixed;
+.formcontainer {
+  flex-direction: column;
+  align-items: center;
+  display: flex;
 }
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.form {
+  width: 78vw;
+  display: flex;
+  justify-content: center;
+}
 input {
   margin-bottom: 4px;
+  border: solid rgba(128, 128, 128, 0.541) 1px;
+  border-radius: 10px;
 }
 a {
   text-decoration: none;
