--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #ffffff;
+  background-image: url('grid-me.png');
 }
 
 .back {
