--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 :root {
   font-size: 1vw;
 }
+
+main {
+  flex-grow:1;  
+}
 h2 {
   font-size: 3rem;
   margin-top: 3px;
@@ -39,7 +43,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #ffffff;
-  background-image: url('grid-me.png');
+  background-image: url('./public/grid-me.png');
 }
 
 .back {
@@ -86,4 +90,10 @@ a {
   :root {
     font-size: 2.2vw;
   }
+}
+footer a {
+  font-size: 16px;
+}
+footer .logo {
+  width: 31px;
 }
